# CXXMessageQueue

./: CMakeLists.txt  Package.swift  README.md
Sources/CXXMessageQueue/include/: module.modulemap
Sources/CXXMessageQueue/include/mpsc/: MessageQueue.hpp
Sources/CXXMessageQueue/mpsc/: MessageQueue.cpp
Tests/CXXMessageQueueTests/: CXXMessageQueueTests.swift
test/: message_queue_benchmark.cpp  message_queue_test.cpp
